# obs-clone

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: backendtest.yml
app/Events/: MessageSent.php
app/Http/Controllers/: ProfileController.php  RegisteredUserController.php  SessionController.php
app/Models/: Message.php  User.php
backend/: composer.json  package-lock.json
backend/app/Models/: Channel.php  User.php
backend/database/factories/: UserFactory.php
backend/database/migrations/: 0001_01_01_000000_create_users_table.php  2025_04_12_182418_create_channels_table.php  2025_05_31_163112_create_streams_table.php
backend/routes/: api.php  web.php
backend/tests/Feature/: AuthTest.php  FollowTest.php  ProfileTest.php
config/: broadcasting.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2025_04_11_150711_create_messages_table.php
desktop/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
desktop/incl/: AudioCapture.h  FFmpegRecorder.h  MainWindow.h  PTR_INFO.h  RecordingManager.h  ScreenCapture.h  VolumeMeter.h  obsproject.h
desktop/src/: AudioCapture.cpp  FFmpegRecorder.cpp  FFmpegStreamer.cpp  MainWindow.cpp  RecordingManager.cpp  ScreenCapture.cpp  VolumeMeter.cpp  obsproject.cpp
frontend/src/context/: AuthContext.js
nginx-rtmp/: docker-compose.yml  nginx.conf
routes/: api.php
src/: App.jsx
src/authentication/: Auth.css  LoginPage.jsx
src/components/channel-description/: StreamDescription.jsx  StreamHeader.jsx
src/components/channel-followers/: FollowersDialog.jsx
src/components/chat/: Chat.css  StreamChat.jsx
src/components/collapsed-sidebar/: CollapsedSidebar.jsx
src/components/follow-button/: FollowButton.jsx
src/components/header/: Header.jsx  header.css
src/components/settings/: SettingsForm.jsx
src/components/share-button/: ShareButton.jsx
src/components/sidebar/: FollowingSidebarItem.jsx  HomeSidebar.jsx
src/components/streamer/: HomePageStreamerItem.jsx
src/context/: AuthContext.js
src/home/: HomePage.jsx
src/layouts/: DefaultLayout.jsx
src/layouts/auth/: AuthLayout.css  AuthLayout.jsx
src/pages/authentication/: AuthUseStyles.js  LoginPage.jsx  RegisterPage.jsx
src/pages/go-live/: GoLivePage.jsx
src/pages/home/: Home.css  HomePage.jsx
src/pages/profile/: Profile.css  ProfilePage.jsx  StreamerProfilePage.jsx
src/pages/search-results/: SearchResultsPage.jsx
src/pages/settings/: SettingsPage.jsx
src/pages/start-stream-page/: StartStreamPage.jsx
src/pages/watch/: Watch.css  (+1 more)
src/pages/watch-page/: WatchPage.jsx
(+14 files in other folders)
